# outfit-recommender

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  compose.yaml  run-podman.sh  test-api.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Containerfile  generate_graph.py  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/agents/: analysis.py  config.py  dspy_signatures.py  multi_model.py  state.py  supervisor.py  trending.py
backend/app/routers/: analyze.py  healthcheck.py
backend/app/utils/: logs.py
backend/tests/: test_agents.py  test_api.py
frontend/: Containerfile  package-lock.json  package.json
frontend/prisma/: dev.db-journal  schema.prisma
frontend/prisma/migrations/20251120021624_init/: migration.sql
frontend/src/app/: actions.ts  page.tsx
